fix nav to hide when scroll

--- a/src/components/Header/Burger/burger.css
+++ b/src/components/Header/Burger/burger.css
@@ -33,7 +33,7 @@
 	position: absolute;
 	height: 4px;
 	width: 100%;
-	background-color: #282626;
+	background-color: #fff;
 	border-radius: 9px;
 	opacity: 1;
 	opacity: .85;
